adding more comments

--- a/Celcius_to_Fahrenheit_Dense_model.ipynb
+++ b/Celcius_to_Fahrenheit_Dense_model.ipynb
@@ -1,41 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/abhie/.local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
+   "source": [
+    "**Load necessary library**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from __future__ import absolute_import, division, print_function, unicode_literals"
@@ -52,6 +28,39 @@
     "logger = tf.get_logger()\n",
     "logger.setLevel(logging.ERROR)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Intinya, kita punya **data** yang ada mapping **kolom A** dan **kolom B**. Kita tahu bahwa ada **relationship** dikolom-kolom tersebut tapi kita tidak tau formulasinya. Nah, disinilah yang dimaksud dengan **training** data. Kita __suruh__ \"komputer\" untuk menebak relasi atau formula tersebut.\n",
+    "\n",
+    "Contoh dibawah ini ada data konversi suhu dari **Celcius** ke **Fahrenheit**. Ya memang sih ada rumusnya **F = C x 1.8 + 32**, lha yang coba ditebak oleh komputer ya rumusnya itu.\n",
+    "\n",
+    "Agak kontradiktif, ada yang lebih mudah tinggal pake rumus saja kok malah harus bikin machine learning segala. Ya ini namanya belajar fundamental dulu karena ini yang mendasari semua jenis machine learning yang akan kita pelajari. Jadi sabar ya."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Datanya seperti ini nih;\n",
+    "\n",
+    "    -40 C = -40 F\n",
+    "    -10 C = 14 F\n",
+    "      0 C = 32 F\n",
+    "      8 C = 46 F\n",
+    "     15 C = 59 F\n",
+    "        dst\n",
+    "Bisa dilihat ya konversinya seperti itu, jadi **C** sebagai __input__ dan **F** sebagai __output__. Kalo kita belum tau rumusnya kan bingung itu ngitungnya gimana kok gitu, ya kan?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -77,7 +86,44 @@
     "fahrenheit_o = np.array([-40, 14, 32, 46, 59, 72, 100])\n",
     "\n",
     "for i,c in enumerate(celcius_i):\n",
-    "    print(\"{} degress C = {} degress F\".format(c, fahrenheit_o[i]))"
+    "    print(\"{} C = {} F\".format(c, fahrenheit_o[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, sampai disini kita paham ya soal **data**\n",
+    "Selanjutnya kita ngomongin tentang **model** yang kita _suruh_ menebak rumus relasi data diatas.\n",
+    "\n",
+    "**Model** itu gambaran matematika dimana ada **input**, **process** dan **output**. Dalam konteks machine learning, komponen-komponen itu disebut **Layer**\n",
+    "\n",
+    "<table>\n",
+    "  <tr><td>\n",
+    "    <img src=\"https://raw.githubusercontent.com/abhiemanyu87/ml-excercise/master/img/dense_layer.PNG\"\n",
+    "         alt=\"Dense Layer\" width=\"600\">\n",
+    "  </td></tr>\n",
+    "  <tr><td align=\"center\">\n",
+    "    <b>Figure 1. Dense Layer</b>\n",
+    "  </td></tr>\n",
+    "</table>\n",
+    "\n",
+    "Disebut **Hidden Layer** karena kita gak perlu tau proses apa yang ada dalam layer tersebut. Tapi pada dasarnya proses itu adalah proses penyesuaian nilai internal variable dalam layer tersebut agar output sesuai dengan data training.\n",
+    "\n",
+    "**Dense** layer adalah _fully-connected_ layer dimana node atau **neuron** saling terhubung antara layer awal dan layer selanjutnya.\n",
+    "\n",
+    "Gambar tersebut hanya ilustrasi susunan layer dalam model. Tidak harus kok model memiliki jumlah 3 atau lebih. Bahkan model yang kita gunakan dalam latihan ini cuma satu.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Model creation**\n",
+    "\n",
+    "Kita bikin layer dulu pake `tf.keras.layers.Dense` dengan parameter `units=1` karena kita butuh 1 neuron. Kemudian `input_shape=[1]` karena layer ini terhubung dari input dengan satu input parameter.\n",
+    "\n",
+    "Oh iya, karena kita pake `Dense layer` jadi otomatis neuron terhubung dengan input dan output ya "
    ]
   },
   {
@@ -86,9 +132,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer0 = tf.keras.layers.Dense(units=4, input_shape=[1])\n",
-    "layer1 = tf.keras.layers.Dense(units=4)\n",
-    "layer2 = tf.keras.layers.Dense(units=1)"
+    "layer0 = tf.keras.layers.Dense(units=1, input_shape=[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setelah bikin layer, kita rangkai layer tersebut menjadi model dengan `tf.keras.Sequential`."
    ]
   },
   {
@@ -98,11 +149,16 @@
    "outputs": [],
    "source": [
     "model = tf.keras.Sequential([\n",
-    "        layer0,\n",
-    "        layer1,\n",
-    "        layer2\n",
+    "        layer0\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -239,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
